# V3DGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  ExamplesList.txt  README.md  build_android.bat  project_android.bat  project_msvc.bat  project_msvc2017.bat
Config/: Android.cmake  ThirdParty.cmake  Windows64.cmake  build.gradle  gradle.properties
Config/gradle/: AndroidManifest.xml.template  build.gradle.template
Config/gradle/wrapper/: gradle-wrapper.properties
Engine/Data/Models/: cube.fbx  monkey.dae  plane.fbx  sphere.dae  teapot.dae  test_blender.dae
Engine/Data/Shaders/: MomentOIT.hlsli  composition.hlsl  debug.hlsl  deferred_lighting.hlsl  environment_common.hlsli  fxaa.hlsl  gamma.hlsl  gbuffer.hlsl  gbuffer_common.hlsli  global.hlsl  global.hlsli  light.hlsl  light_directional_shadows.hlsl  light_point_shadows.hlsl  light_shadows.hlsl  lighting.hlsli  lighting_common.hlsli  lit_solid_color.hlsl  offscreen.hlsl  offscreen_common.hlsli  outline.hlsl  screen_space_shadow.hlsl  shadow_common.hlsli  simple.hlsl  skybox.hlsl  taa.hlsl  tonemapping.hlsl  transparency.hlsl  transparency_mboit.hlsl  transparency_msoit.hlsl  transparency_sdboit.hlsl  transparency_sdoit.hlsl  transparency_soit_mrt.hlsl  vfx_common.hlsli  viewport.hlsli
Engine/Data/Textures/: Good64x64TilingNoiseHighFreq.DDS  default_lut.dds  default_material.dds  default_normal.dds  default_white.dds  greyscale_lut.dds  noise_blue.dds  uv_grid.dds
Engine/Libs/crc32c/: CMakeLists.txt
Engine/Libs/spirv/: install.bat  install_android_platform.bat  install_windows_platform.bat
Engine/Models/: test1.dae  test_max.DAE
Engine/Shaders/: mrt.vert
Engine/Source/: Application.cpp  Application.h  Common.h  Configuration.h  FrameProfiler.h  Object.h  Types.h
Engine/Source/Core/: Core.h  Dimension2D.h  Dimension2D.inl  Dimension3D.h  Dimension3D.inl  Math.h  Matrix2D.h  Matrix2D.inl  Matrix3D.h  Matrix3D.inl  Matrix4D.h  Matrix4D.inl  Rect.h  Rect.inl  Vector2D.h  Vector2D.inl  Vector3D.h  Vector3D.inl  Vector4D.h  Vector4D.inl
Engine/Source/Event/: Event.h  EventHandler.h  (+16 more)
Examples/1.CreateWindow/: AndroidManifest.xml  CMakeLists.txt  CreateWindow.cpp  MyApplication.cpp  MyApplication.h  build.gradle
Examples/2.ClearColor/: CMakeLists.txt  ClearColor.cpp  MyApplication.cpp  MyApplication.h
Examples/3.DrawMesh/: CMakeLists.txt  Main.cpp  MyApplication.cpp  SimpleRender.cpp  SimpleRender.h
Examples/3.RenderTarget/: CMakeLists.txt  MyApplication.cpp  MyApplication.h
Examples/3.SimpleDraw/: CMakeLists.txt  MyApplication.cpp  MyApplication.h  SimpleRender.cpp  SimpleRender.h
Examples/3.SimpleDraw/shaders/: mesh.frag  mesh.vert  simple.frag  simple.vert
Examples/4.DrawScene/: CMakeLists.txt  MyApplication.cpp  MyApplication.h  Scene.cpp  Scene.h
Examples/4.RenderTarget/: CMakeLists.txt  MyApplication.cpp  MyApplication.h
Examples/5.Test/: CMakeLists.txt  MyApplication.cpp
Examples/5.Test/data/: simple.frag
Examples/5.Test/shaders/: simple.frag  simple.vs
Examples/ClearColor/: AndroidManifest.xml  CMakeLists.txt  Main.cpp  MyApplication.cpp  MyApplication.h  gradle.properties
Examples/CreateWindow/: AndroidManifest.xml  CMakeLists.txt  Main.cpp  MyApplication.cpp  MyApplication.h
Examples/DrawMesh/: AndroidManifest.xml  CMakeLists.txt  Main.cpp  MyApplication.cpp  MyApplication.h  Scene.cpp  Scene.h  SimpleRender.cpp  SimpleRender.h  TextureRender.cpp  TextureRender.h  gradle.properties
Examples/DrawMesh/data/shaders/: mesh.frag  mesh.frag.glsl  mesh.hlsl  mesh.ps  mesh.vert  mesh.vs  mesh.vspv  simple.vert
Examples/DrawMesh/shaders/: mesh.frag
Examples/DrawScene/: CMakeLists.txt  MyApplication.cpp  MyApplication.h  Scene.cpp
Examples/DrawScene/data/shaders/: composition.vert  fullscreen.frag  particle.vert  simple.frag  simple.vert  skysphere.frag  skysphere.vert
Examples/LightTest/: BumpmapRender.cpp  BumpmapRender.h  CMakeLists.txt  DirectionalLightRender.cpp  DirectionalLightRender.h  MyApplication.cpp  MyApplication.h  PointLightRender.cpp  PointLightRender.h  UnlitRender.cpp  UnlitRender.h
Examples/MultithreadedDraws/: CMakeLists.txt  Main.cpp  Render.cpp  Render.h  Scene.cpp  Scene.h
Examples/QueryTest/: BaseDraw.h  BasePass.cpp  BasePass.h  CMakeLists.txt  MyApplication.cpp  MyApplication.h  OffscreenPass.cpp  OffscreenPass.h  Scene.cpp  Scene.h
Examples/RenderTarget/: CMakeLists.txt  MyApplication.cpp  MyApplication.h  Render.cpp  Render.h
Examples/ShadowTest/: CMakeLists.txt  Debug.cpp  Debug.h  MyApplication.cpp  MyApplication.h  ShadowMap.cpp  ShadowMap.h
Examples/SimpleTriangle/: AndroidManifest.xml  CMakeLists.txt  Main.cpp  MyApplication.cpp  MyApplication.h  SimpleTriangle.cpp  SimpleTriangle.h  build.gradle  gradle.properties
Examples/Test/: CMakeLists.txt  MyApplication.cpp  MyApplication.h
Examples/Test/data/shaders/: generate-spirv.bat  testReflectInfoWithNames.frag  testReflectInfoWithNames.fspv  testReflectInfoWithNames.hlsl  testReflectInfoWithNames.ps  testReflectInfoWithNames.vspv
Examples/Test/shaders/: generate-spirv.bat  simple.ps  testReflectInfo.frag  testReflectInfo.fspv  testReflectInfo.hlsl  testReflectInfo.ps  testReflectInfo.vert  testReflectInfo.vs  testReflectInfo.vspv  testReflectInfoWithNames.vert  testReflectInfoWithNames.vs
Examples/UIEditor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorAssetBrowser.cpp  EditorAssetBrowser.h  EditorContentScreen.cpp  EditorContentScreen.h  EditorGizmo.cpp  EditorGizmo.h  EditorPropertyScreen.cpp  EditorPropertyScreen.h  EditorScene.cpp  EditorScene.h  EditorUI.cpp  EditorUI.h  EditorViewScreen.cpp  EditorViewport.cpp  EditorViewport.h  Main.cpp  Scene.cpp  Scene.h
Examples/V3DEditor/: CMakeLists.txt  EditorAssetBrowser.cpp  EditorContentScreen.cpp  EditorGizmo.cpp  EditorGizmo.h  EditorHotReload.cpp  EditorHotReload.h  EditorPropertyScreen.cpp  EditorPropertyScreen.h  EditorScene.cpp  EditorScene.h  EditorUI.cpp  EditorUI.h  EditorViewScreen.cpp  EditorViewScreen.h  Main.cpp
Project/Android/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
(+925 files in other folders)
